--- a/UE/S2/IPF/projet/README
+++ b/UE/S2/IPF/projet/README
@@ -5,7 +5,7 @@
 
 ----------------------------------------------------------
 - Le code se situe dans le dossier "code".
-Un Makfile est disponible à la racine du dossier 'code' pour compiler
+Un Makefile est disponible à la racine du dossier 'code' pour compiler
 un programme de tests. Veuillez taper la commande:
 ```
 cd code ; make ; ./subset-sum-opt.out
