--- a/UE/S2/IPF/projet/rapport/rapport.tex
+++ b/UE/S2/IPF/projet/rapport/rapport.tex
@@ -4,15 +4,16 @@
 \usepackage{floatrow}
 
 \usepackage{algorithm, algpseudocode}
-\newcommand{\vars}{\texttt}
-\newcommand{\func}{\textrm}
 \let\oldReturn\Return
 \renewcommand{\Return}{\State\oldReturn}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\R}{\mathbb{R}}
 \usepackage[T1]{fontenc}
 \usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{scrextend}
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{listings}
@@ -77,12 +78,12 @@
 			\begin{algorithm}
 				\caption{Renvoie la somme des éléments de E}
 				\begin{algorithmic}[1]
-					\Function{Somme}{$\vars{E'}$}
+					\Function{Somme}{$E' \subset \mathbb{N}$}
 						\If{$E' = \emptyset$}
 							\Return 0
 						\EndIf
 						\State Soit $x \in E'$
-						\Return x + Somme($E' \backslash \{x\}$)
+						\Return x + $\mathtt{Somme}(E' \backslash \{x\}$)
 					\EndFunction
 				\end{algorithmic}
 			\end{algorithm}
@@ -92,13 +93,13 @@
 			\begin{algorithm}
 				\caption{Renvoie l'ensemble des parties de E}
 				\begin{algorithmic}[1]
-					\Function{Sous-ensembles}{$\vars{E}$}
+					\Function{Sous-ensembles}{$E \subset \mathbb{N}$}
 						\If{$E = \emptyset$}
 							\Return $\{\emptyset\}$
 						\EndIf
 						\State Soit $x \in E$
-						\State Soit $P \leftarrow Sous-ensembles(E \backslash \{x\})$
-						\Return $\{P\} \cup \{E' \cup x \mid E' \in P\}$
+						\State Soit $P \leftarrow \mathtt{Sous-ensembles}(E \backslash \{x\})$
+						\Return $P \cup \{E' \cup x \mid E' \in P\}$
 					\EndFunction
 				\end{algorithmic}
 			\end{algorithm}
@@ -108,15 +109,15 @@
 			\begin{algorithm}
 				\caption{Renvoie la réponse au problème SUBSET\_SUM\_OPT sur (E, s)}
 				\begin{algorithmic}[1]
-					\Function{subset\_sum}{$\vars{E}, \vars{s}$}
-						\State Soit $P \leftarrow Sous-ensembles(E)$
-						\Return $\underset{E' \in P}{\max}\{s' \mid s' = Somme(E') \quad et \quad s' \leq s\}$
+					\Function{subset\_sum}{$E \subset \mathbb{N}, s \in \mathbb{N}$}
+						\State Soit $P \leftarrow \mathtt{Sous-ensembles}(E)$
+						\Return $\underset{E' \in P}{\max}\{s' \mid s' = \mathtt{Somme}(E') \quad et \quad s' \leq s\}$
 					\EndFunction
 				\end{algorithmic}
 			\end{algorithm}
 			Complexité en $\boxed{O(2^nn)}$, où $n = Card(E)$
 		\newpage
-		\section{Approche plus directe}
+		\section{Approche plus directe}\label{approche_plus_directe}
 			Dans cette approche, plutot que de calculer l'ensemble des parties de $E$,
 			on se propose de calculer l'ensemble des sommes atteignables en sommet sur les parties de $E$.
 			
@@ -124,12 +125,12 @@
 				\begin{algorithm}
 					\caption{Renvoie l'ensemble des entiers $s$ tels qu'il existe $E' \subseteq E$ vérifiant $\sum\limits_{e \in E'}e = s$}
 					\begin{algorithmic}[1]
-						\Function{Get\_all\_sums}{$\vars{E}$}
+						\Function{Get\_all\_sums}{$E \subset \mathbb{N}$}
 							\If{$E = \emptyset$}
 								\Return $\{0\}$
 							\EndIf
 							\State Soit $x \in E$
-							\State $S \leftarrow Get\_all\_sums(E \backslash \{x\})$
+							\State $S \leftarrow \mathtt{Get\_all\_sums}(E \backslash \{x\})$
 							\Return $S \cup \{x + s \mid s \in S\}$
 						\EndFunction
 					\end{algorithmic}
@@ -152,21 +153,75 @@
 				\begin{algorithm}
 					\caption{Renvoie la réponse au problème SUBSET\_SUM\_OPT sur (E, s)}
 					\begin{algorithmic}[1]
-						\Function{subset\_sum}{$\vars{E}, \vars{s}$}
-							\State Soit $S \leftarrow Get\_all\_sums(E)$
+						\Function{subset\_sum}{$E \subset \mathbb{N}, s \in \mathbb{N}$}
+							\State Soit $S \leftarrow \mathtt{Get\_all\_sums}(E)$
 							\Return $\max\{s' \in S \mid 0 \leq s' \leq s\}$
 						\EndFunction
 					\end{algorithmic}
 				\end{algorithm}
-				La complexité de cet algorithme de résolution est donc en $\boxed{O(m(n)^3 * n)}$
+				La complexité de cet algorithme de résolution est donc en $\boxed{O(m(n)^2 * n)}$
 
 	\newpage
-	\section{Approche avec nettoyage}\label{approche_naive}
+		\section{Approche avec nettoyage}\label{approche_naive}
+			On peut réduire la complexité de l'approche précèdente en réduisant ce que l'on a noté $m(n)$ (le nombre de sommes atteignables.
+			Dans cette approche, on se propose d'ajouter un 'filtre' sur l'algorithme qui génère les sommes.
+				\subsection{Question 6 ; fonction clean\_up}
+					Le filtre (l'algorithme 'clean\_up') est donnée dans l'énoncé. Cette fonction prends en paramètre:
+					\begin{itemize}[label=-]
+						\setlength\itemsep{0.1em}
+						\item $E \subset \mathbb{N}$ : l'ensemble a filtré
+						\item $s \in \mathbb{N}$ : un entier positif
+						\item $\delta \in \mathbb{R}_+^*$ : un réel positif (généralement $\ll 1$)
+					\end{itemize}
+					Cette fonction renvoie un nouvel ensemble $E' \subset E$, tel que:
+					\begin{itemize}[label=-]
+						\setlength\itemsep{0.1em}
+						\item	$\forall x \in E' , x \leq s$
+						\item	Si l'on considère la suite croissante $(u_n)_{n \in \mathbb{N}}$ des éléments de $E'$,
+								$\forall n \in \mathbb{N}, u_{n + 1} \geq (1 + \delta)u_n $.
+					\end{itemize}
+		
+					Autrement dit, tous les entiers strictement supérieurs à $n$ sont supprimés, et 
+					si l'on considère 2 entiers consécutifs de l'ensemble trié $x$ et $y$, tel que $x < y$,
+					ils sont 'proches d'un rapport d'au moins $(1 + \delta)$, $y$ est supprimé.
+					Ce filtre supprime donc les éléments de l'ensemble qui sont 'proches' l'un de l'autre (au regard de $\delta$)
 
+				\subsection{Question 7 : résolution de SUBSET\_SUM\_OPT}
+					L'algorithme de résolution est également fourni dans l'énoncé.
+					Il est le même que celui de 'l'approche plus directe' \ref{approche_plus_directe}, sauf que
+					lors du calcul des sommes atteignables filtrés par la fonction 'clean\_up'.
+					
+					\begin{algorithm}
+					\caption{Renvoie l'ensemble des entiers $s$ tels qu'il existe
+								$E' \subseteq E$ vérifiant $\sum\limits_{e \in E'}e = s$, passant les tests du filtre}
+					\begin{algorithmic}[1]
+						\Function{Get\_all\_sums\_2}{$E \subset \mathbb{N}$}
+							\If{$E = \emptyset$}
+								\Return $\{0\}$
+							\EndIf
+							\State Soit $x \in E$
+							\State $S \leftarrow \mathtt{Get\_all\_sums\_2}(E \backslash \{x\})$
+							\Return $\mathtt{clean\_up}(S \cup \{x + s \mid s \in S\})$
+						\EndFunction
+					\end{algorithmic}
+				\end{algorithm}
+				
+				\begin{algorithm}
+					\caption{Renvoie la réponse au problème SUBSET\_SUM\_OPT sur (E, s)}
+					\begin{algorithmic}[1]
+						\Function{subset\_sum}{$E \subset \mathbb{N}, s \in \mathbb{N}$}
+							\State Soit $S \leftarrow \mathtt{Get\_all\_sums\_2}(E)$
+							\Return $\max\{s' \in S \mid 0 \leq s' \leq s\}$
+						\EndFunction
+					\end{algorithmic}
+				\end{algorithm}
+				La complexité de cet algorithme de résolution est donc en $\boxed{O(m'(n)^2 * n)}$,
+				avec $$m'(n) = Card\{sommes \quad atteignables \quad filtrés\} < m(n)$$.
+				\textbf{Attention} cependant, pour $\delta$ trop grand, on perd l'optimalité du résultat.
+				
 	\newpage
 	\section{Références}
 		\begin{thebibliography}{}
-		
 			\bibitem{cache_friendly}
 				'Writting Cache-Friendly code', Gerson Robboy, Portland State University\newline
 				\href{http://web.cecs.pdx.edu/~jrb/cs201/lectures/cache.friendly.code.pdf}
