--- a/UE/S2/IPF/projet/rapport/rapport.tex
+++ b/UE/S2/IPF/projet/rapport/rapport.tex
@@ -184,7 +184,7 @@
 			\begin{itemize}[label=-]
 				\setlength\itemsep{0.1em}
 				\item $n$ : nombre de récursion
-				\item $m(n)^2$ : l'union
+				\item $m(n)$ : l'union
 			\end{itemize}
 			\textbf{Remarque:} Cette algorithme fourni les sommes atteignables dans un ordre croissant. ($\bullet < \bullet$)
 
